<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NameLess Updater</string>
    <string name="anyUpdate">Votre système est à jour.</string>
    <string name="buttonUpdate">Mise à jour</string>
    <string name="buttonFull">Version complète</string>
    <string name="noConnection">Aucune connexion détectée. Connectez-vous avant d\'utiliser l\'application !</string>
    <string name="errorCheck">La vérification de la mise n\'a pas pu être exécutée</string>
    <string name="wait">Patientez...</string>
    <string name="verificationProgress">Vérification en cours</string>
    <string name="newVersionAvailable">Une nouvelle version est disponible</string>
    <string name="changelog">Changelog</string>
    <string name="downloadProgress">Téléchargement en cours...</string>
    <string name="error">Erreur</string>
    <string name="information">Information</string>
    <string name="saveIn">Sauvegarder dans</string>
    <string name="downloadStoped">Téléchargement interrompu !</string>
    <string name="errorWriting">Impossible d\'enregistrer le fichier. Vérifiez les droits en écriture !</string>
    <string name="errorDownload">Impossible de télécharger le fichier.</string>
    <string name="update">Actualiser</string>
    <string name="menuSettings">Paramètres</string>
    <string name="preferencesTitle">Paramètres</string>
    <string name="prefUpdateInterval">Fréquences d\'actualisation</string>
    <string name="prefUpdateIntervalEnable">Actualisation automatique</string>
    <string name="prefUpdateIntervalEnableSum">Activer la vérification, à intervalle régulier, des mises à jour.</string>
    <string name="preferenceListUpdate">Intervalle d\'actualisation</string>
    <string-array name="preferenceListUpdateEntries">.
			    <item>Une fois par jour</item>
				<item>Une fois par semaine</item>
	</string-array> 
	<string-array name="preferenceListUpdateValue">.
			    <item>86400000</item>
				<item>604800000</item>
	</string-array>
	<string name="preferencesAbout">A propos</string>
	<string name="preferencesAboutSum">Créée par Jojolejobar pour NameLess</string>
	<string name="preferencesVersion">Version</string>
	<string name="preferencesDownloadDestCat">Destination des téléchargements</string>
	<string name="preferenceEditDownloadDest">Dossier de téléchargement</string>
	<string name="preferencesDownloadDest">Rétablir le dossier par défaut</string>
	<string name="preferencesDownloadDestSum">Dossier par défaut : /mnt/sdcard/</string>
	<string name="defaultDownloadDir">/mnt/sdcard/</string>
	<string name="updateAvalaibleNotifTitle">Une nouvelle version de NameLess est disponible</string>
	<string name="newVersionNotif">Cliquer pour plus d\'informations</string>
	<string name="errorMD5">La vérification du fichier à échoué, le fichier est peut-être corrompu ! Voulez-vous le télécharger à nouveau ?</string>
	<string name="retry">Rééssayer</string> 
</resources>
