<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
            android:title="@string/prefUpdateInterval">

        <CheckBoxPreference
                android:key="checkBoxUpdate"
                android:title="@string/prefUpdateIntervalEnable"
                android:summary="@string/prefUpdateIntervalEnableSum"
                android:defaultValue="true"/>
                
       <ListPreference
                android:key="listUpdate"
                android:title="@string/preferenceListUpdate"
                android:entries="@array/preferenceListUpdateEntries"
                android:entryValues="@array/preferenceListUpdateValue"
                android:dialogTitle="@string/preferenceListUpdate"
                android:dependency="checkBoxUpdate"
                android:defaultValue="86400000"/>
  </PreferenceCategory>
  
  <PreferenceCategory
  		android:title="@string/preferencesDownloadDestCat">
  		
  		<EditTextPreference
	  		android:key="editDownloadDest"
	        android:title="@string/preferenceEditDownloadDest"
	        android:defaultValue="@string/defaultDownloadDir"/>
	   <Preference
	   		android:key="preferenceDownloadDest"
        	android:title="@string/preferencesDownloadDest"
        	android:summary="@string/preferencesDownloadDestSum"
        />
	        
  </PreferenceCategory>
  
  <PreferenceCategory
            android:title="@string/preferencesAbout">
        <Preference
        	android:title="@string/preferencesAbout"
        	android:summary="@string/preferencesAboutSum"
        />
        
        <Preference
        	android:key="preferencesVersion"
        	android:title="@string/preferencesVersion"
        />
  </PreferenceCategory>
</PreferenceScreen>
